# motu_server

./: Dockerfile  Makefile  README.md  datastore.json  docker-compose.yml  pytest.ini  requests.http  requirements-dev.txt  requirements.txt  run
.github/workflows/: deploy-gcloud.yml  publish-to-pypi-test.yml  publish-to-pypi.yml  release-drafter.yml  release-publish.yml  run-tests-on-pr.yml  run-tests.yml
src/: README.md  pyproject.toml  setup.cfg
src/package/motu_server/: datastore.py  server.py  zeroconf_registration.py
src/tests/unit/: test_datastore.py
