[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motu_server"
version = "0.1.9"
description = "A tornado web server emulating a MOTU AVB interface's datastore API. Enables development of tools to read and manipulate the datastore without requiring an active interface."
readme = "README.md"
authors = [{ name = "Christopher Johnston", email = "christopher_johnston@me.com" }]
license = { file = "LICENSE" }
dependencies = [
    "tornado",
    "aiohttp",
    "zeroconf"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["motu", "avb", "development"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/ChristopherJohnston/motu_server"